# pondhouse-v2

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.cursor/rules/: commonutil.mdc  cpprule.mdc  limit-auto-cpp.mdc  test.mdc  verify.mdc
.github/workflows/: build.yml
spec/tla/: Notes.md  Raft.cfg  Raft.tla  Utilities.tla
src/: main.cpp
src/catalog/: README.md  catalog.h  data_ingestor.cpp  data_ingestor.h  data_ingestor_util.cpp  data_ingestor_util.h  kv_catalog.cpp  kv_catalog.h  kv_catalog_util.cpp  kv_catalog_util.h  metadata.h  table_data_ingestor.cpp  table_data_ingestor.h  types.cpp  types.h
src/client/: README.md  pond_client.py
src/common/: append_only_fs.cpp  append_only_fs.h  bloom_filter.cpp  bloom_filter.h  bplus_tree.h  column_type.h  crc.cpp  crc.h  data_chunk.h  data_chunk_writer.h  data_variant.h  error.cpp  error.h  expression.h  expression_types.h  filesystem_stream.cpp  filesystem_stream.h  iterator.h  log.cpp  log.h  log.inl  lru_cache.h  memory_append_only_fs.cpp  memory_append_only_fs.h  memory_stream.cpp  memory_stream.h  result.h  schema.h  scope_exit.h  serializable.h  skip_list.h  stream.h  time.h  types.h  uuid.h  validation.h  wal.h  wal_entry.h  wal_state_machine.h
src/format/parquet/: append_only_input_stream.cpp  append_only_input_stream.h  append_only_output_stream.cpp  append_only_output_stream.h  fragments_dataset.h  parquet_reader.cpp  parquet_reader.h  parquet_writer.cpp  parquet_writer.h  schema_converter.cpp  schema_converter.h
src/format/sstable/: sstable_format.cpp  sstable_format.h  sstable_reader.cpp  sstable_reader.h  sstable_writer.cpp  sstable_writer.h
src/kv/: README.md  TODO.md  basic_kv_table.cpp  basic_kv_table.h  compaction_metrics.h  db.cpp  db.h  i_kv_table.h  kv_entry.cpp  kv_entry.h  kv_table.cpp  kv_table.h  kv_table_factory.h  kv_table_iterator.cpp  kv_table_iterator.h  memtable.cpp  memtable.h  record.cpp  record.h  record_iterator.cpp  record_iterator.h  sstable.cpp  sstable.h  sstable_cache.cpp  sstable_cache.h  sstable_format.cpp  sstable_format.h  sstable_manager.cpp  sstable_manager.h  sstable_reader.cpp  sstable_reader.h  sstable_writer.cpp  sstable_writer.h  table.cpp  table.h  table_metadata.cpp  table_metadata.h  versioned_value.h
src/proto/: kv.proto  pond_service.proto
src/query/: README.md
src/query/data/: arrow_predicate.cpp  arrow_predicate.h  arrow_record_batch_builder.cpp  arrow_record_batch_builder.h  arrow_util.cpp  arrow_util.h  catalog_data_accessor.cpp  catalog_data_accessor.h  data_accessor.h
src/query/executor/: executor.cpp  executor.h  executor_util.cpp  executor_util.h  hash_join.cpp  hash_join.h  materialized_executor.cpp  materialized_executor.h  operator_iterators.cpp  operator_iterators.h  simple_executor.cpp  simple_executor.h  sql_table_executor.cpp  sql_table_executor.h  vectorized_executor.cpp  vectorized_executor.h
src/query/planner/: logical_optimizer.cpp  logical_optimizer.h  logical_plan_node.cpp  logical_plan_node.h  logical_plan_printer.cpp  logical_plan_printer.h  logical_planner.cpp  logical_planner.h  physical_plan_node.cpp  physical_plan_node.h  physical_plan_printer.cpp  physical_plan_printer.h  physical_planner.cpp  physical_planner.h  planner.cpp  planner.h
src/rsm/: README.md  api.h  mock_replication_oracle.cpp  mock_replication_oracle.h  replication.h  rsm.cpp  rsm.h  snapshot.h  snapshot_manager.cpp  snapshot_manager.h  wal_replication.h
src/server/: minikube_deploy.sh  pond_service_impl.cpp  server_main.cpp  start_servers.sh
src/server/client/: pond_client.py
src/server/envoy/: Dockerfile  envoy.yaml
src/server/gRPC/: dockerfile  pond_service_impl.cpp  pond_service_impl.h  server_main.cpp  type_converter.h
src/server/k8s/: deployment.yaml  service.yaml  web-deployment.yaml
src/server/web/: .gitignore  Dockerfile  main.py  pond_client.py  requirements.txt
src/server/web/templates/: base.html  catalog.html  files.html  index.html  layout.html  parquet_viewer.html  (+2 more)
tests/: main.cpp  test_helper.cpp  test_helper.h
tests/catalog/: data_ingestor_test.cpp  data_ingestor_util_test.cpp  kv_catalog_test.cpp  kv_catalog_util_test.cpp  shared.h  table_data_ingestor_test.cpp
tests/common/: append_only_fs_test.cpp  bloom_filter_test.cpp  bplus_tree_test.cpp  crc_test.cpp  data_chunk_test.cpp  error_test.cpp  expression_test.cpp  iterator_test.cpp  lru_cache_test.cpp  replication_test.cpp  result_test.cpp  scope_exit_test.cpp  skip_list_test.cpp  stream_test.cpp  test_helper.h  time_test.cpp  uuid_test.cpp  wal_state_machine_test.cpp  wal_test.cpp
tests/format/parquet/: parquet_test.cpp  schema_converter_test.cpp
tests/format/sstable/: sstable_filter_test.cpp  sstable_format_test.cpp  sstable_reader_test.cpp  sstable_writer_test.cpp
tests/kv/: compaction_metrics_test.cpp  db_test.cpp  kv_table_test.cpp  kv_wal_test.cpp  memtable_test.cpp  record_test.cpp  sstable_cache_test.cpp  sstable_filter_test.cpp  sstable_format_test.cpp  sstable_manager_test.cpp  sstable_reader_test.cpp  sstable_test.cpp  sstable_writer_test.cpp  table_metadata_test.cpp  table_test.cpp  versioned_value_test.cpp  wal_test.cpp
tests/proto/: metadata_test.cpp
tests/query/: arrow_predicate_test.cpp  arrow_record_batch_builder_test.cpp  arrow_util_test.cpp  create_table_command_test.cpp  data_accessor_test.cpp  executor_util_test.cpp  hash_join_test.cpp  logical_optimizer_test.cpp  logical_planner_test.cpp  materialized_executor_test.cpp  operator_iterators_test.cpp  physical_planner_test.cpp  query_test_context.h  query_test_helper.h  simple_executor_test.cpp  sql_table_executor_test.cpp  test_logical_planner.cpp  vectorized_executor_test.cpp
tests/rocksdb/: rocksdb_basic_test.cpp  rocksdb_column_family_test.cpp  rocksdb_options_test.cpp  rocksdb_transaction_test.cpp
tests/rsm/: integer_state_machine.h  mock_replication_oracle_test.cpp  replicated_state_machine_test.cpp  replication_test.cpp  snapshot_manager_test.cpp
tests/server/gRPC/: pond_service_impl_test.cpp  type_converter_test.cpp
tests/sql/: hyrise_parser_test.cpp
